examples/type_system/failing/83_match_guarded_wildcard_only_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/83_match_guarded_wildcard_only_non_exhaustive.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/83_match_guarded_wildcard_only_non_exhaustive.flx:27:1
//    |
// 27 | match n {
//    | ^^^^^^^^^
// 28 |     _ if n > 0 -> 1
//    | ^^^^^^^^^^^^^^^^^^^
// 29 | };
//    | ^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E015: Guarded wildcard is not an unconditional catch-all.
let n = 2;

match n {
    _ if n > 0 -> 1
};
